final fix to nextBestMove